regress/scripts/kubernetes/kubernetes-plugin-test-0001.yaml
# testing-ns-0001: Config file to test the pvcdata features

apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns-0001-1
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0001-1
  namespace: testing-ns-0001-1
spec:
  volumes:
    - name: pvc-dc7cdd05-a92d-416a-b584-fd7043b5bf48
      persistentVolumeClaim:
        claimName: test-pvc-0001-1
  containers:
    - name: test-nginx-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-dc7cdd05-a92d-416a-b584-fd7043b5bf48
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0001-2
  namespace: testing-ns-0001-1
spec:
  volumes:
    - name: pvc-dc7cdd05-a92d-416a-b584-fd7083b5bf48
      persistentVolumeClaim:
        claimName: test-pvc-0001-2
  containers:
    - name: test-nginx-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-dc7cdd05-a92d-416a-b584-fd7083b5bf48
---
apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns-0001-2
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0001-3
  namespace: testing-ns-0001-2
spec:
  volumes:
    - name: pvc-0001-3
      persistentVolumeClaim:
        claimName: test-pvc-0001-3
  containers:
    - name: test-nginx-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0001-3
