regress/scripts/kubernetes/kubernetes-plugin-test-0003.yaml
# testing-ns-0003: Config file to test the backup with postgresql pods

apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns-0003-1
---
apiVersion: v1
kind: Pod
metadata:
  namespace: testing-ns-0003-1
  name: test-pod-0003-1
  labels:
    app: postgres
spec:
  volumes:
    - name: pvc-dc7cdd05-a92d-416a-b584-fd7043b5bf68
      persistentVolumeClaim:
        claimName: test-pvc-0003-1
  containers:
    - name: test-postgres-container
      image: 'postgres:14'
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 5432
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pvc-dc7cdd05-a92d-416a-b584-fd7043b5bf68
