regress/scripts/kubernetes/kubernetes-plugin-test-0004.yaml
# testing-ns-0004: Config file to test the backup with postgresql pods

apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns-0004-1
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0004-1
  namespace: testing-ns-0004-1
spec:
  volumes:
    - name: pvc-0004-1
      persistentVolumeClaim:
        claimName: test-pvc-0004-1
  containers:
    - name: test-container-0004-2
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0004-1
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0004-2
  namespace: testing-ns-0004-1
spec:
  volumes:
    - name: pvc-0004-2
      persistentVolumeClaim:
        claimName: test-pvc-0004-2
  containers:
    - name: test-container-0004-2
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0004-2
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0004-3
  namespace: testing-ns-0004-1
spec:
  volumes:
    - name: pvc-0004-3
      persistentVolumeClaim:
        claimName: test-pvc-0004-3
  containers:
    - name: test-container-0004-3
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0004-3
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0004-4
  namespace: testing-ns-0004-1
spec:
  volumes:
    - name: pvc-0004-4
      persistentVolumeClaim:
        claimName: test-pvc-0004-4
  containers:
    - name: test-container-0004-4
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0004-4
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0004-5
  namespace: testing-ns-0004-1
spec:
  volumes:
    - name: pvc-0004-5
      persistentVolumeClaim:
        claimName: test-pvc-0004-5
  containers:
    - name: test-container-0004-5
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0004-5
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0004-6
  namespace: testing-ns-0004-1
spec:
  volumes:
    - name: pvc-0004-6
      persistentVolumeClaim:
        claimName: test-pvc-0004-6
  containers:
    - name: test-container-0004-6
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0004-6
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0004-7
  namespace: testing-ns-0004-1
spec:
  volumes:
    - name: pvc-0004-7
      persistentVolumeClaim:
        claimName: test-pvc-0004-7
    - name: pvc-0004-8
      persistentVolumeClaim:
        claimName: test-pvc-0004-8
  containers:
    - name: test-container-0004-7
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc"
          name: pvc-0004-7
        - mountPath: "/pvc2"
          name: pvc-0004-8
