regress/scripts/kubernetes/kubernetes-plugin-test-0005.yaml
# testing-ns-0005: Config file to test the backup with annotations

apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns-0005-1
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0005-1
  namespace: testing-ns-0005-1
  annotations:
    bacula/backup.mode: clone
    bacula/backup.volumes: test-pvc-0005-1, test-pvc-0005-2
spec:
  volumes:
    - name: pvc-0005-1
      persistentVolumeClaim:
        claimName: test-pvc-0005-1
    - name: pvc-0005-2
      persistentVolumeClaim:
        claimName: test-pvc-0005-2
  containers:
    - name: test-nginx-container
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/pvc-1"
          name: pvc-0005-1
        - mountPath: "/pvc-2"
          name: pvc-0005-2
