regress/scripts/kubernetes/kubernetes-plugin-test-0002.yaml
# testing-ns-0001: Config file to test the feature where avoid terminating pvc test
# Source: 
# https://rook.io/docs/rook/latest-release/Getting-Started/quickstart/#tldr

apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns-0002-1
---
# Source: rook/deploy/examples/dashboard-ingress-https.yaml
#
# This example is for Kubernetes running an nginx-ingress
# and an ACME (e.g. Let's Encrypt) certificate service
#
# The nginx-ingress annotations support the dashboard
# running using HTTPS with a self-signed certificate
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: testing-ns-0002-1 # namespace:cluster
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - rook-ceph.example.com
      secretName: rook-ceph.example.com
  rules:
    - host: rook-ceph.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: https-dashboard
---
# Source: rook/deploy/examples/dashboard-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-dashboard-loadbalancer
  namespace: testing-ns-0002-1 # namespace:cluster
  labels:
    app: rook-ceph-mgr
    rook_cluster: testing-ns-0002-1 # namespace:cluster
spec:
  ports:
    - name: dashboard
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: rook-ceph-mgr
    mgr_role: active
    rook_cluster: testing-ns-0002-1
  sessionAffinity: None
  type: LoadBalancer
  externalIPs:
  - 10.0.100.35
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-dashboard-external-http
  namespace: testing-ns-0002-1 # namespace:cluster
  labels:
    app: rook-ceph-mgr
    rook_cluster: testing-ns-0002-1 # namespace:cluster
spec:
  ports:
    - name: dashboard
      port: 7000
      protocol: TCP
      targetPort: 7000
  selector:
    app: rook-ceph-mgr
    mgr_role: active
    rook_cluster: testing-ns-0002-1
  sessionAffinity: None
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-0002-1
  namespace: testing-ns-0002-1
spec:
  containers:
    - name: test-nginx-container
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
          name: "http-server"
